# computational_physics

./: README.md
Exam/: CMakeLists.txt  main.cc
Exercise_1/: CMakeLists.txt  main.cc
Exercise_2/: CMakeLists.txt  main.cc
Exercise_4/: CMakeLists.txt  main.cc
Exercise_5/: CMakeLists.txt  main.cc
Exercise_8/: CMakeLists.txt  main.cc
Exercise_9/: CMakeLists.txt  main.cpp
